<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.93" 
        android:background="@color/DarkBlue">    

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ScegliLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScegliLabel"
                android:textColor="@color/White" />

        </TableRow>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/stradio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/StaticOnTable"
                    android:textColor="@color/White"/>
                
                <RadioButton
                    android:id="@+id/spradio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StaticInPocket"
                    android:textColor="@color/White"/>

                <RadioButton
                    android:id="@+id/wradio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Walking"
                    android:textColor="@color/White"/>

                <RadioButton
                    android:id="@+id/rradio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Running"
                    android:textColor="@color/White"/>
            </RadioGroup>

        
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true" 
            android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/ScegliRitardo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScegliRitardo"
                android:textColor="@color/White" />

            <EditText
                android:id="@+id/ritardo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/DefaultDelay"
                android:nextFocusUp="@id/ritardo" 
                android:nextFocusLeft="@id/ritardo"/>
 
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"   
            android:focusable="true" 
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/ScegliDurata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScegliDurata"
                android:textColor="@color/White" />

            <EditText
                android:id="@+id/durata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" 
                android:hint="@string/DefaultLength"/>
 

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
        </TableRow>

        <Button
            android:id="@+id/startbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="start"
            android:text="@string/Start" />

        <Button
            android:id="@+id/stopbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stop"
            android:text="@string/Stop" />

    </TableLayout>

</ScrollView>